package events;
option java_package = "org.yamcs.protobuf";

// The actual event definition is currently still residing in yamcs.proto
// Thatâ€™s for the next refactoring wave (which plans to slim down the rest.proto)

message GetEventsRequest {
    //time specification
    optional int64 start = 1;
    optional int64 stop = 2;
   
    //alternative time specification: ISO 8061 time of shape 2012-11-03T07:36:33.323 (no timezone!)
    optional string utcStart = 3;
    optional string utcStop = 4;
}
